; ModuleID = '/home/carl/AnghaBench/linux/drivers/parport/extr_parport_pc.c_parport_dma_probe.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/parport/extr_parport_pc.c_parport_dma_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parport = type { i64, %struct.parport_pc_private* }
%struct.parport_pc_private = type { i64 }

@PARPORT_DMA_NONE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.parport*)* @parport_dma_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parport_dma_probe(%struct.parport* %0) #0 {
  %2 = alloca %struct.parport*, align 8
  %3 = alloca %struct.parport_pc_private*, align 8
  store %struct.parport* %0, %struct.parport** %2, align 8
  %4 = load %struct.parport*, %struct.parport** %2, align 8
  %5 = getelementptr inbounds %struct.parport, %struct.parport* %4, i32 0, i32 1
  %6 = load %struct.parport_pc_private*, %struct.parport_pc_private** %5, align 8
  store %struct.parport_pc_private* %6, %struct.parport_pc_private** %3, align 8
  %7 = load %struct.parport_pc_private*, %struct.parport_pc_private** %3, align 8
  %8 = getelementptr inbounds %struct.parport_pc_private, %struct.parport_pc_private* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %1
  %12 = load %struct.parport*, %struct.parport** %2, align 8
  %13 = call i64 @programmable_dma_support(%struct.parport* %12)
  %14 = load %struct.parport*, %struct.parport** %2, align 8
  %15 = getelementptr inbounds %struct.parport, %struct.parport* %14, i32 0, i32 0
  store i64 %13, i64* %15, align 8
  br label %16

16:                                               ; preds = %11, %1
  %17 = load %struct.parport*, %struct.parport** %2, align 8
  %18 = getelementptr inbounds %struct.parport, %struct.parport* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @PARPORT_DMA_NONE, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %27

22:                                               ; preds = %16
  %23 = load %struct.parport*, %struct.parport** %2, align 8
  %24 = call i64 @get_superio_dma(%struct.parport* %23)
  %25 = load %struct.parport*, %struct.parport** %2, align 8
  %26 = getelementptr inbounds %struct.parport, %struct.parport* %25, i32 0, i32 0
  store i64 %24, i64* %26, align 8
  br label %27

27:                                               ; preds = %22, %16
  %28 = load %struct.parport*, %struct.parport** %2, align 8
  %29 = getelementptr inbounds %struct.parport, %struct.parport* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = trunc i64 %30 to i32
  ret i32 %31
}

declare dso_local i64 @programmable_dma_support(%struct.parport*) #1

declare dso_local i64 @get_superio_dma(%struct.parport*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
